syntax = "proto3";

package proto.zhongbang;

message OpenAcctMessage {
  string merchno = 1;
  string trueName = 2;
  string certno = 3;
  string mobile = 4;
  string cardno = 5;
  string bankno = 6;
  string bankName = 7;
  string signature = 8;
}

message OpenAcctResponse {
  string respCode = 1;
  string message = 2;
  int32 status = 3;
  string statusDesc = 4;
  string trueName = 5;
  string certno = 6;
}